<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.HomeFragment">

        <TextView
            android:id="@+id/tvFragmentHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:theme="@style/title"
            android:text="@string/bienvenido"
            android:textSize="40sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitlePreferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/preferencias_de_usuario"
            android:textSize="25sp"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFragmentHome" />

        <TextView
            android:id="@+id/tvTitleDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/modo_oscuro"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvTitleLanguage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitlePreferences" />

        <TextView
            android:id="@+id/tvTitleLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cambiar_idioma"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTitleDark"
            app:layout_constraintTop_toBottomOf="@+id/tvTitlePreferences" />


        <Button
            android:id="@+id/btnFragmentRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/style_boton"
            android:text="RecyclerView"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnPermisos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/style_boton"
            android:text="@string/permisos_camara"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btnFragmentRecycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnNotificaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/style_boton"
            android:text="@string/notificaciones"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btnPermisos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvTexto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:theme="@style/text_description"
            android:layout_marginTop="50dp"
            android:padding="20dp"
            android:text="@string/texto_ejemplo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNotificaciones" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>